Fix input box misalignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -510,10 +510,6 @@ footer {
   text-align: center;
 }
 
-.auth-form.signup-form {
-  top: 200px;
-}
-
 .auth-form-header {
   font-size: larger;
   margin: 0 0 10px;
@@ -525,6 +521,7 @@ footer {
 }
 
 input.credentials-input {
+  width: 350px;
   padding: 10px;
   outline: none;
   border: none;
